tortoisehg (0.9-1) unstable; urgency=low

  * New upstream release (Closes: #557263).
  * Update copyright file.
  * Bump mercurial dependency to 1.4.
  * Specify minimum version for pyobject and pygtk dependencies.
  * Set Python-Version to current.
  * Replace fix-license-path.patch with add-config-file.patch: the whole
    config file needs to be provided.
  * Remove avoid-double-locale-install.patch (merged upstream).
  * Add preserve-version.patch to prevent setup.py from overriding the package
    version (but sitll fix it by hand after clean, as patches are unapplied
    before calling setup.py).

 -- Ludovico Cavedon <ludovico.cavedon@gmail.com>  Sat, 21 Nov 2009 02:06:50 -0800

tortoisehg (0.8+dfsg1-1) unstable; urgency=low

  * Initial release (Closes: #535902).
  * Merge changes from Max Bowsher Ubuntu PPA package:
    - update copyright statement
    - fix-license-path.patch

 -- Ludovico Cavedon <ludovico.cavedon@gmail.com>  Tue, 29 Sep 2009 16:15:03 -0700