@@ -1,2 +1,3 @@
 ReleaseNotes.txt
 contrib/
+doc/build/html
